--- a/Investors/main.css
+++ b/Investors/main.css
@@ -331,6 +331,7 @@ CALENDAR SECTION  */
   border: 2px solid #575fcf;
   border-radius: 50px;
   padding: 1.5rem 2rem;
+  cursor: pointer;
 }
 
 /* **************** 
@@ -452,6 +453,7 @@ IMPACT SECTION  */
   font-size: 1rem;
   font-weight: 800;
   letter-spacing: 1px;
+  cursor: pointer;
 }
 
 .img-bck {
@@ -494,6 +496,7 @@ footer {
 .row-1 {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 4rem;
 }
 
 .icon-ubisoft-logo-desktop {
